@@ -1,8 +1,0 @@
-api = 2
-core = 7.x
-
-; Libraries
-libraries[ckeditor][directory_name] = ckeditor
-libraries[ckeditor][download][type] = file
-libraries[ckeditor][download][url] = http://download.cksource.com/CKEditor%20for%20Drupal/edit/ckeditor_4.4.0_edit.zip
-libraries[ckeditor][type] = library
